--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cloudera.utils</groupId>
     <artifactId>hadoop.parent</artifactId>
-    <version>1.4.0.0</version>
+    <version>1.5.0.0</version>
     <packaging>pom</packaging>
 
     <name>Cloudera Utils Parent</name>
@@ -66,9 +66,9 @@
         <snakeyaml.version>2.4</snakeyaml.version>
 
         <cdp.scope>compile</cdp.scope>
-        <cdp.version>7.3.1.0-197</cdp.version>
-        <hadoop.version>3.1.1</hadoop.version>
-        <ozone.version>1.3.0</ozone.version>
+<!--        <cdp.version>7.3.1.0-197</cdp.version>-->
+        <hadoop.version>3.4.1</hadoop.version>
+        <ozone.version>1.4.1</ozone.version>
 
         <gateway-shell.version>1.0.0</gateway-shell.version>
         <jline.version>2.5</jline.version>
@@ -186,7 +186,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
-            <version>${hadoop.version}.${cdp.version}</version>
+            <version>${hadoop.version}</version>
             <scope>${cdp.scope}</scope>
             <exclusions>
                 <exclusion>
@@ -258,7 +258,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs-client</artifactId>
-            <version>${hadoop.version}.${cdp.version}</version>
+            <version>${hadoop.version}</version>
             <scope>${cdp.scope}</scope>
             <exclusions>
                 <exclusion>
@@ -274,7 +274,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <version>${hadoop.version}.${cdp.version}</version>
+            <version>${hadoop.version}</version>
             <scope>${cdp.scope}</scope>
             <exclusions>
                 <exclusion>
@@ -394,7 +394,7 @@
         <dependency>
             <groupId>org.apache.ozone</groupId>
             <artifactId>ozone-client</artifactId>
-            <version>${ozone.version}.${cdp.version}</version>
+            <version>${ozone.version}</version>
             <scope>${cdp.scope}</scope>
             <exclusions>
                 <exclusion>
@@ -450,13 +450,13 @@
         <dependency>
             <groupId>org.apache.ozone</groupId>
             <artifactId>ozone-filesystem</artifactId>
-            <version>${ozone.version}.${cdp.version}</version>
+            <version>${ozone.version}</version>
             <scope>${cdp.scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-auth</artifactId>
-            <version>${hadoop.version}.${cdp.version}</version>
+            <version>${hadoop.version}</version>
             <scope>${cdp.scope}</scope>
             <exclusions>
                 <exclusion>
